--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,9 @@ footer .f2 .m2 ul li a{
     .imgprin{
         width: 70%;
     }
+    .search{
+        margin-left: 5px;
+    }
 }
 @media screen and (max-width: 320px) {
     .itens{
