--- a/css/style.css
+++ b/css/style.css
@@ -215,8 +215,8 @@ main{
     position: relative;
     position: absolute;
     cursor: pointer;
-    bottom: 13%;
-    right: 0.5%;
+    bottom: 100px;
+    right: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -305,6 +305,9 @@ footer .f2 .m2 ul li a{
         height: 60%;
         display: flex;
         flex-direction: column;
+    }
+    #switch{
+        bottom: 155px;
     }
 }
 @media  screen and (max-width: 630px){
